--- a/Kleineanzeige_Images_Scraper.ipynb
+++ b/Kleineanzeige_Images_Scraper.ipynb
@@ -35,6 +35,7 @@
         "---\n",
         "If you want to collect images of IKEA products from Ebay Kleinazeige, first create an ikeaRangeListJson by following the steps 1.1 to 2.4 in this project:\n",
         "https://github.com/Greqorian/IKEAcom_Image_Scraper\n",
+        "<br/> However, you can scrap pictures of any items you like, just provide your own product list in step 3.2\n",
         "\n",
         "Scraping images from the Ebay Kleinanzeige Service is done in 3 steps:"
       ],
@@ -45,7 +46,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1. Libraries and constans definition"
+        "# 1. Libraries and constants definition"
       ],
       "metadata": {
         "id": "PU6DSn1qz_7y"
