--- a/Kleineanzeige_Images_Scraper.ipynb
+++ b/Kleineanzeige_Images_Scraper.ipynb
@@ -301,19 +301,19 @@
         "INPUT: This loop takes as input the list of products in the form of:\n",
         "\n",
         "> ikeaRangeListJson[] = [ {\n",
-        "  </br> id: string\n",
-        "  </br> name: string\n",
-        "  </br> url: string\n",
-        "</br> } ]\n",
+        "  <br/> id: string\n",
+        "  <br/> name: string\n",
+        "  <br/> url: string\n",
+        "<br/> } ]\n",
         "\n",
         "RESULT: This loop fills the new list with item id, name and list of urls as follows:\n",
         "\n",
         "> itemsList[] = [ {\n",
-        "  </br> id: string\n",
-        "  </br> name: string\n",
-        "  </br> urls: string[]\n",
-        "  </br> imgSrcs: string[]\n",
-        "</br> } ]\n",
+        "  <br/> id: string\n",
+        "  <br/> name: string\n",
+        "  <br/> urls: string[]\n",
+        "  <br/> imgSrcs: string[]\n",
+        "<br/> } ]\n",
         "\n",
         "\n",
         "\n"
@@ -344,11 +344,11 @@
         "RESULT: This loop fills the itemsList with item images sources as follows:\n",
         "\n",
         "> itemsList[] = [ {\n",
-        "  </br> id: string\n",
-        "  </br> name: string\n",
-        "  </br> urls: string[]\n",
-        "  </br> imgSrcs: string[]\n",
-        "</br> } ]\n",
+        "  <br/> id: string\n",
+        "  <br/> name: string\n",
+        "  <br/> urls: string[]\n",
+        "  <br/> imgSrcs: string[]\n",
+        "<br/> } ]\n",
         "\n"
       ],
       "metadata": {
